# AVR_interfacing_NTI_4_Month

./: README.md
APP_LAYER/0x00-ledBlink/: Main.d  Main.elf  Main.hex  Main.lss  MainProgram.map  Makefile  main.c
APP_LAYER/0x01-LCD/: Main.d  Main.elf  Main.hex  Main.lss  MainProgram.map  Makefile  main.c
APP_LAYER/0x03-KPD/: Main.d  Main.elf  Main.hex  Main.lss  Main.map  Makefile  main.c
APP_LAYER/0x04-EXTI/: Main.d  Main.elf  Main.hex  Main.lss  Main.map  Makefile  main.c
APP_LAYER/0x06-Timer/: Main.d  Main.elf  Main.hex  Main.lss  Main.map  MainProgram.map  Makefile  README.txt  main.c
APP_LAYER/0x07-Timer/: Main.d  Main.elf  Main.hex  Main.lss  Main.map  Makefile  README.txt  main.c
APP_LAYER/0x08-timer/: CMakeLists.txt  Main.d  Main.elf  Main.hex  Main.lss  Main.map  Makefile  command.txt  main.c
APP_LAYER/0x08-timer/debug/: CMakeCache.txt
HAL/KPD/: KEYPAD_Config.h  KEYPAD_Interface.h  KEYPAD_Program.c  Makefile  kpd.d  libkpd.lss
HAL/LCD/: LCD_config.h  LCD_interface.h  LCD_program.c  LCD_special_char.h  Makefile  lcd.d  lcd_private.h  liblcd.lss
HAL/LED/: LED_config.h  LED_interface.c  LED_interface.h  LED_private.h  Makefile  led.d  libled.lss
LIB/: BIT_MATH.h  STD_TYPES.h
MCAL/ADC/: ADC_config.h  ADC_interface.h  ADC_private.h  ADC_program.c  Makefile  adc.d  libadc.lss
MCAL/DIO/: DIO_Config.h  DIO_Interface.h  DIO_Private.h  DIO_Program.c  Makefile  dio.d  libdio.lss
MCAL/EXT/: EXTINT_config.h  EXTINT_interface.h  EXTINT_private.h  EXTINT_program.c  Makefile  ext.d  libext.lss
MCAL/GIE/: GIE_private.h  GIE_program.c  Makefile  gie.d  libgie.lss
MCAL/SPI/: Makefile  SPI_config.h  SPI_interface.h  SPI_private.h  SPI_program.c
MCAL/TIMER/: Makefile  TIMER_config.h  (+5 more)
(+30 files in other folders)
